<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android" xmlns:tools="http://schemas.android.com/tools"
        tools:visibility="gone"
        android:id="@+id/no_shops"
        android:gravity="center_horizontal"
        android:layout_gravity="center_vertical"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" tools:showIn="@layout/shop_list_fragment">

    <TextView
            android:text="@string/label_no_shops"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

    <com.google.android.material.button.MaterialButton
            android:id="@+id/add_first_shop"
            android:text="@string/label_click_to_add_shop"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

</LinearLayout>

    